# jws2txt

./: README.md  jws2txt.py  pyproject.toml  requirements.txt
.github/workflows/: jws2txt_actions.yaml
jws2txt/: __init__.py  jws2txt.py
jws2txt/helpers/: helpers.py
src/: jws2txt.py
src/helpers/: helpers.py
src/jws2txt/: jws2txt.py
temp/: 001Hg.jws  14.jws  2022_05_14-1.jwb  BGR20190312[5294].jws  sample_fluorescence.jws  sample_fluorescence_3.jws  smth.jws  test.py
tests/: test_helpers.py  test_main.py
tests/files/: sample_CD_HT_Abs.jws
